Add authentication test
